--- a/style.css
+++ b/style.css
@@ -7,6 +7,21 @@ h1 {
     color: cornflowerblue;
     text-align: center;
     font-size: 30px;
+    cursor: none;
+  }
+
+  .rounded{
+    width: 30px;
+    height: 30px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+  }
+
+  .pointed{
+    width: 7px;
+    height: 7px;
+    background-color: white;
+    border-radius: 50%;
   }
   
   a {
