--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
     cursor: none;
   }
 
-  .rounded{
+  /*.rounded{
     width: 30px;
     height: 30px;
     border: 2px solid #fff;
@@ -22,7 +22,7 @@ h1 {
     height: 7px;
     background-color: white;
     border-radius: 50%;
-  }
+  }*/
   
   a {
     color: rgb(67, 95, 174);
