--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h1 {
   .rounded{
     width: 30px;
     height: 30px;
-    border: 2px solid #fff;
+    /*border: 2px solid #fff;*/
     border-radius: 50%;
   }
 
