--- a/style.css
+++ b/style.css
@@ -53,10 +53,10 @@ h1 {
     text-align: center;
   }
 
-  .rounded{
+  /*.rounded{
     width: 30px;
     height: 30px;
-    /*border: 2px solid #fff;*/
+    border: 2px solid #fff;
     border-radius: 50%;
   }
 
@@ -65,4 +65,4 @@ h1 {
     height: 7px;
     background-color: white;
     border-radius: 50%;
-  }
+  }*/
